--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "web/sqlmap"]
 	path = web/sqlmap
 	url = https://github.com/sqlmapproject/sqlmap.git
+[submodule "mobile/Mobile-Security-Framework-MobSF"]
+	path = mobile/Mobile-Security-Framework-MobSF
+	url = https://github.com/MobSF/Mobile-Security-Framework-MobSF.git
